fix visibility of photo button for both 980px bigger or smaller screens and minor css

--- a/src/App.css
+++ b/src/App.css
@@ -527,13 +527,11 @@ body {
   font-weight: 600;
   color: white;
   text-shadow: 0 0 3vh #0a778f;
-  transition-duration: 1s;
 }
 
 .photoButton:hover {
   color: #0a778f;
   text-shadow: 0 0 3vh grey;
-  transition-duration: 1s;
 }
 
 /* --- END EXPERIENCE --- */
@@ -586,13 +584,11 @@ body {
   font-weight: 600;
   color: white;
   text-shadow: 0 0 3vh #0a778f;
-  transition-duration: 1s;
 }
 
-.photoButton:hover {
+.interestPhotoButton:hover {
   color: #0a778f;
   text-shadow: 0 0 3vh grey;
-  transition-duration: 1s;
 }
 
 .interest-photos {
@@ -1053,7 +1049,6 @@ body {
     font-size: 0.9em;
   }
 
-  
   /*  --- INTERESTS --- */
   .interest_pictures img {
     width: 70%;
